force-app/main/default/objects/iPhone__c/iPhone__c.object-meta.xml
<CustomObject>
    <label>iPhone</label>
    <nameField>
        <label>iPhone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iPhones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>