force-app/main/default/objects/iPhone__c/fields/Descriptions_of_issues__c.field-meta.xml
<CustomField>
    <fullName>Descriptions_of_issues__c</fullName>
    <inlineHelpText>explain what is wrong with the iphone</inlineHelpText>
    <label>Descriptions of issues</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>