force-app/main/default/objects/iPhone__c/fields/Does_it_charge__c.field-meta.xml
<CustomField>
    <fullName>Does_it_charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does it charge</label>
    <type>Checkbox</type>
</CustomField>