force-app/main/default/objects/iPhone__c/fields/iPhone_Color__c.field-meta.xml
<CustomField>
    <fullName>iPhone_Color__c</fullName>
    <label>iPhone Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>