force-app/main/default/objects/iPhone__c/fields/Iphone_Version__c.field-meta.xml
<CustomField>
    <fullName>Iphone_Version__c</fullName>
    <description>What version is the owners iphone</description>
    <label>Iphone Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5S</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>6S</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>